test(integration): Integration tests running

--- a/tests/integration/docker-compose.yaml
+++ b/tests/integration/docker-compose.yaml
@@ -19,3 +19,11 @@ services:
       - ALLOW_PLAINTEXT_LISTENER=yes
     depends_on:
       - zookeeper
+
+  mongodb:
+    image: mongo
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: mongo
+      MONGO_INITDB_ROOT_PASSWORD: mongo
+    ports:
+      - "27017:27017"
